<resources>
    <string name="app_name">AKEF Play</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">Level : 0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="tournaments">Tournaments</string>
    <string name="latestupdates">Latest Updates</string>
    <string name="streamersconnect">Streamers Connect</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log In</string>

    <string name="home_page_desc_title">THE FUTURE IS HERE</string>
    <string name="desc_main_text">Are you ready to experience the future of eSports Community ?
            Because we are. We from AKEF family welcomes you to experience the true meaning of community and to join us in this journey, to tomorrow. </string>
    <string name="codm_header">Looking for <font color='#EE0000'>CODM</font> Page?</string>
    <string name="codm_desc">Are you a COD Mobile player ? We have launched a new subsidiary for COD Mobile. Wanna know more about our new this?.</string>
    <string name="trending_games">TRENDING <font color='#EE0000'>GAMES</font></string>
    <string name="our_services">OUR <font color='#ffc400'>SERVICES</font></string>
    <string name="our_partners">OUR <font color='#ffc400'>PARTNERS</font></string>
    <string name="recent_events">RECENT <font color='#ffc400'>EVENTS</font></string>

    <string name="contact_desc">Feel free to reach out to us if you have some queries, we\'ll be happy to help.</string>
    <string name="share_portfolio">For business purposes share your portfolio with <b>mail@akef.in</b> </string>
    <string name="close" />
    <string name="open" />
    <string name="streaming">Streaming</string>
    <string name="games">Games</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="forums">Forums</string>
    <string name="log_out">Log Out</string>
    <string name="webview">WebView</string>
    <string name="profile">My Profile</string>
    <string name="mytourney">My Tournaments</string>
    <string name="my_matches">My Matches</string>
    <string name="talent_management">TALENT MANAGEMENT</string>
    <string name="talent_managment_desc">AKEF acts as a Talent Incubator and helps budding eSports stars as well as aspiring content creators in the field of gaming.</string>
    <string name="streamers_paradise">STREAMERS PARADISE</string>
    <string name="streamers_paradise_desc">We have a huge network of talented streamers and casters who are ready to get on any event and make it worth spending time to watch.</string>
    <string name="event_management">EVENT MANAGEMENT</string>
    <string name="event_management_desc">We organize community tournaments for gamers along with hosting online and offline events, LAN Parties, Game launches, Themed Parties and more.</string>
    <string name="largest_gaming_community">LARGEST GAMING COMMUNITY</string>
    <string name="gaming_community_desc">Community is the biggest gift that you can ask for if you are a gamer, AKEF have the biggest community of gamers playing a wide array of games</string>
    <string name="streaming_npartner"><font color='#ffc400'>Streaming</font> \nPartner</string>
    <string name="actiwear_npartner"><font color='#ffc400'>Actiwear</font> \nPartner</string>
    <string name="store_npartner"><font color='#ffc400'>Store</font> \nPartner</string>
    <string name="login_prompt">Please Login To take part in this tournament</string>
    <string name="upload_desc">Please select a video clip to upload. \nMaximum video length allowed is 1 minute</string>
    <string name="game_reels">Game Reels</string>
    <string name="add_title">Add Title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>

</resources>