<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_tournament"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/tournaments" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/mytournament"
            android:icon="@drawable/ic_emoji_events_24px"
            android:title="@string/mytourney" />

        <item
            android:id="@+id/matches"
            android:icon="@drawable/ic_baseline_games_24"
            android:title="@string/my_matches" />


        <item
            android:id="@+id/nav_latest_updates"
            android:icon="@drawable/ic_baseline_new_releases_24"
            android:title="@string/latestupdates" />

        <item
            android:id="@+id/nav_streamers_connect"
            android:icon="@drawable/ic_baseline_videocam_24"
            android:title="@string/streamersconnect" />

        <item
            android:id="@+id/forum"
            android:icon="@drawable/ic_baseline_forum_24"
            android:title="@string/forums" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/menu_bot">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_subdirectory_arrow_right_24"
            android:title="@string/log_in" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_subdirectory_arrow_left_24"
            android:title="@string/log_out"
            android:visible="false"/>


    </group>
</menu>