<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tournament">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.akef.UI.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_tournament"
        android:name="com.android.akef.UI.tournaments.TournamentsFragment"
        android:label="@string/tournaments"
        tools:layout="@layout/tournaments_fragment" />

    <fragment
        android:id="@+id/nav_latest_updates"
        android:name="com.android.akef.UI.latestupdates.LatestUpdatesFragment"
        android:label="@string/latestupdates"
        tools:layout="@layout/latest_updates_fragment" />


    <fragment android:id="@+id/nav_streamers_connect"
        android:name="com.android.akef.UI.streamersconnect.StreamersConnectFragment"
        android:label="@string/streamersconnect"
        tools:layout="@layout/streamers_connect_fragment" />

    <fragment android:id="@+id/nav_forum"
        android:name="com.android.akef.UI.webview.WebviewFragment"
        android:label="@string/forums"
        tools:layout="@layout/webview_fragment" >
        <argument
            android:name="URL"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <action
        android:id="@+id/action_global_nav_forum"
        app:destination="@id/nav_forum"
        app:launchSingleTop="true" />

    <fragment android:id="@+id/nav_profile"
        android:name="com.android.akef.UI.webview.WebviewFragment"
        android:label="@string/profile"
        tools:layout="@layout/webview_fragment" >
        <argument
            android:name="URL"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <action
        android:id="@+id/action_global_nav_profile"
        app:destination="@id/nav_profile"
        app:launchSingleTop="true" />

    <fragment android:id="@+id/nav_settings"
        android:name="com.android.akef.UI.webview.WebviewFragment"
        android:label="@string/settings"
        tools:layout="@layout/webview_fragment" >
        <argument
            android:name="URL"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <action
        android:id="@+id/action_global_nav_settings"
        app:destination="@id/nav_settings"
        app:launchSingleTop="true" />

    <fragment android:id="@+id/nav_mytournament"
        android:name="com.android.akef.UI.webview.WebviewFragment"
        android:label="@string/mytourney"
        tools:layout="@layout/webview_fragment" >
        <argument
            android:name="URL"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <action
        android:id="@+id/action_global_nav_mytournament"
        app:destination="@id/nav_mytournament"
        app:launchSingleTop="true" />

    <fragment android:id="@+id/nav_matches"
        android:name="com.android.akef.UI.webview.WebviewFragment"
        android:label="@string/my_matches"
        tools:layout="@layout/webview_fragment" >
        <argument
            android:name="URL"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <action
        android:id="@+id/action_global_nav_matches"
        app:destination="@id/nav_matches"
        app:launchSingleTop="true" />

</navigation>